--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
     "react-router-dom": "^6.17.0",
+    "tailwindcss": "^3.4.1",
     "vite": "^4.2.0"
   }
 }
