--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "styled-components": "^5.3.9",
+    "uuid": "^10.0.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
