--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.0-alpha3",
+    "flowbite-react": "^0.10.2",
     "history": "^5.3.0",
     "json-server": "^1.0.0-beta.1",
     "react": "^18.2.0",
