--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.0-alpha3",
     "flowbite-react": "^0.10.2",
+    "formik": "^2.4.6",
     "history": "^5.3.0",
     "json-server": "^1.0.0-beta.1",
     "react": "^18.2.0",
