--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-query": "^3.39.3",
     "styled-components": "^5.3.9",
     "uuid": "^10.0.0",
+    "yup": "^1.4.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
