--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.4.6",
     "history": "^5.3.0",
     "json-server": "^1.0.0-beta.1",
+    "lucide-react": "^0.507.0",
     "rc-slider": "^11.1.8",
     "react": "^18.2.0",
     "react-datepicker": "^4.24.0",
