--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.507.0",
     "rc-slider": "^11.1.8",
     "react": "^18.2.0",
+    "react-calendar": "^5.1.0",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
