--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.0-alpha3",
+    "datatables.net-dt": "^2.3.4",
+    "datatables.net-react": "^1.0.1",
     "flowbite-react": "^0.10.2",
     "formik": "^2.4.6",
     "history": "^5.3.0",
     "json-server": "^1.0.0-beta.1",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.507.0",
     "rc-slider": "^11.1.8",
     "react": "^18.2.0",
     "react-calendar": "^5.1.0",
+    "react-data-table-component": "^7.7.0",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
